--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,29 +2,29 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        browser: [chrome, firefox]
-        headless: [true, false]
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # Step 1: Checkout the code
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      # Step 2: Set up JDK 11
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
 
+      # Step 3: Cache Maven dependencies
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -32,26 +32,27 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Run Web Tests
-        env:
-          API_KEY: ${{ secrets.API_KEY }}
-        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser=${{ matrix.browser }} -Dheadless=${{ matrix.headless }}
+      # Step 4: Build and run tests with Maven
+      - name: Build and Test
+        run: mvn clean test
 
+      # Step 5: Generate Allure report
       - name: Generate Allure Report
-        if: always()
+        if: always()  # Run even if tests fail
         run: mvn allure:report
 
+      # Step 6: Upload Allure results
       - name: Upload Allure Results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: allure-results-${{ matrix.browser }}-${{ matrix.headless }}
+          name: allure-results
           path: target/allure-results
 
-      - name: Deploy Allure Report
-        if: always() && github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: peaceiris/actions-gh-pages@v3
+      # Step 7: Deploy Allure report to GitHub Pages (optional)
+      - name: Deploy Allure Report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: target/site/allure-maven-plugin
-          destination_dir: allure-report/${{ matrix.browser }}-${{ matrix.headless }}
