--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,58 +1,48 @@
-name: CI Pipeline
+name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, master ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, master ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 11
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '21'
           distribution: 'temurin'
+          cache: maven
 
-      # Step 3: Cache Maven dependencies
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      # Step 4: Build and run tests with Maven
       - name: Build and Test
         run: mvn clean test
 
-      # Step 5: Generate Allure report
-      - name: Generate Allure Report
-        if: always()  # Run even if tests fail
-        run: mvn allure:report
-
-      # Step 6: Upload Allure results
-      - name: Upload Allure Results
+      - name: Get Allure history
+        uses: actions/checkout@v3
         if: always()
-        uses: actions/upload-artifact@v4
+        continue-on-error: true
         with:
-          name: allure-results
-          path: target/allure-results
+          ref: gh-pages
+          path: gh-pages
 
-      # Step 7: Deploy Allure report to GitHub Pages (optional)
-      - name: Deploy Allure Report to GitHub Pages
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@master
         if: always()
-        uses: peaceiris/actions-gh-pages@v4
+        with:
+          allure_results: target/allure-results
+          allure_history: allure-history
+          keep_reports: 20
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: target/site/allure-maven-plugin
+          publish_branch: gh-pages
+          publish_dir: allure-history
