--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,34 @@
 name: Java CI with Maven
-
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-
       - name: Build and Test
         run: mvn clean test
-
-      - name: Save Log File
+      # Create logs directory if it doesn't exist
+      - name: Ensure logs directory exists
+        run: mkdir -p logs
         if: always()
+      # Upload log files as artifacts
+      - name: Upload logs
         uses: actions/upload-artifact@v3
+        if: always()
         with:
-          name: api-tests-log
-          path: logs/api-tests.log
-          retention-days: 7
-
+          name: test-logs
+          path: logs/
+          retention-days: 14
       - name: Get Allure history
         uses: actions/checkout@v3
         if: always()
@@ -38,7 +36,6 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
-
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
         if: always()
@@ -46,7 +43,6 @@ jobs:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
-
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
