--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        browser: [ chrome, firefox ]
+        headless: [ true, false ]
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -15,12 +21,18 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-      - name: Build and Test
-        run: mvn clean test
+
+      - name: Run API Tests
+        run: mvn test -Dcucumber.filter.tags="@api"
+
+      - name: Run Web Tests
+        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser=${{ matrix.browser }} -Dheadless=${{ matrix.headless }}
+
       # Create logs directory if it doesn't exist
       - name: Ensure logs directory exists
         run: mkdir -p logs
         if: always()
+
       # Upload log files as artifacts
       - name: Upload logs
         uses: actions/upload-artifact@v4
@@ -29,6 +41,7 @@ jobs:
           name: test-logs
           path: logs/
           retention-days: 14
+
       - name: Get Allure history
         uses: actions/checkout@v3
         if: always()
@@ -36,6 +49,7 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
         if: always()
@@ -43,6 +57,14 @@ jobs:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
+
+      - name: Upload Allure Results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-results-${{ matrix.browser }}-${{ matrix.headless }}
+          path: target/allure-results
+
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
@@ -50,3 +72,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
+          destination_dir: allure-report/${{ matrix.browser }}-${{ matrix.headless }}
