--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: mvn test -Dcucumber.filter.tags="@api"
 
       - name: Run Web Tests (chrome)
-        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="chorme" -Dheadless=true
+        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="chrome" -Dheadless=true
 
       - name: Run Web Tests (firefox)
         run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="firefox" -Dheadless=true
