--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: false  # Disable submodules unless explicitly needed
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
@@ -28,12 +31,10 @@ jobs:
         run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="firefox" -Dheadless=true
         if: always()
 
-      # Create logs directory if it doesn't exist
       - name: Ensure logs directory exists
         run: mkdir -p logs
         if: always()
 
-      # Upload log files as artifacts
       - name: Upload logs
         uses: actions/upload-artifact@v4
         if: always()
@@ -49,6 +50,7 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+          submodules: false  # Disable submodules here too
 
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
