--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,63 +5,88 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  test:
+  api-tests:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: false  # Disable submodules unless explicitly needed
-
+          submodules: false
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-
       - name: Run API Tests
         run: mvn test -Dcucumber.filter.tags="@api"
 
+  web-tests-chrome:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: false
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
       - name: Run Web Tests (chrome)
         run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="chrome" -Dheadless=true
-        if: always()
 
+  web-tests-firefox:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: false
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
       - name: Run Web Tests (firefox)
         run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="firefox" -Dheadless=true
-        if: always()
 
+  # Optional: Collect logs and generate reports after all tests complete
+  collect-results:
+    runs-on: ubuntu-latest
+    needs: [api-tests, web-tests-chrome, web-tests-firefox]  # Wait for all test jobs to finish
+    if: always()  # Run even if previous jobs fail
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: false
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
       - name: Ensure logs directory exists
         run: mkdir -p logs
-        if: always()
-
       - name: Upload logs
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: test-logs
           path: logs/
           retention-days: 14
-
       - name: Get Allure history
         uses: actions/checkout@v3
-        if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
-          submodules: false  # Disable submodules here too
-
+          submodules: false
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
-        if: always()
         with:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
-
       - name: Deploy report to Github Pages
-        if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
