--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run API Tests
-        run: mvn test -Dcucumber.filter.tags="@api"
+        run: mvn test -Dcucumber.filter.tags="@api" -Dcucumber.plugin="io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
+      - name: Upload Allure Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-api
+          path: target/allure-results/
+        if: always()
 
   web-tests-chrome:
     runs-on: ubuntu-latest
@@ -33,7 +39,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run Web Tests (chrome)
-        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="chrome" -Dheadless=true
+        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="chrome" -Dheadless=true -Dcucumber.plugin="io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
+      - name: Upload Allure Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-chrome
+          path: target/allure-results/
+        if: always()
 
   web-tests-firefox:
     runs-on: ubuntu-latest
@@ -48,47 +60,54 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run Web Tests (firefox)
-        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="firefox" -Dheadless=true
+        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="firefox" -Dheadless=true -Dcucumber.plugin="io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
+      - name: Upload Allure Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-firefox
+          path: target/allure-results/
+        if: always()
 
-  # Optional: Collect logs and generate reports after all tests complete
   collect-results:
     runs-on: ubuntu-latest
-    needs: [api-tests, web-tests-chrome, web-tests-firefox]  # Wait for all test jobs to finish
-    if: always()  # Run even if previous jobs fail
+    needs: [api-tests, web-tests-chrome, web-tests-firefox]
+    if: always()
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-
-      - name: Ensure logs directory exists
-        run: mkdir -p logs
-
-      - name: Upload logs
-        uses: actions/upload-artifact@v4
+      - name: Download Allure Results
+        uses: actions/download-artifact@v4
         with:
-          name: test-logs
-          path: logs/
-          retention-days: 14
-
+          path: downloaded-allure-results
+        if: always()
+      - name: Merge Allure Results
+        run: |
+          mkdir -p target/allure-results
+          cp -r downloaded-allure-results/*/*/ target/allure-results/ || true
+        if: always()
+      - name: Check Allure Results
+        run: ls -la target/allure-results || echo "No Allure results found"
+        if: always()
       - name: Get Allure history
         uses: actions/checkout@v3
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
-
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
         with:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
-
+      - name: Debug Allure History
+        run: ls -la allure-history || echo "Allure history directory is empty"
+        if: always()
       - name: Deploy report to Github Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
