--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,116 +1,109 @@
-name: Java CI with Maven
+name: Cucumber Selenium Tests with Allure Report
+
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
+
 jobs:
-  api-tests:
+  test:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        browser: [chrome, firefox]
+      fail-fast: false
+
     steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: false
-      - name: Set up JDK 21
+      # Checkout the code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
-          cache: maven
-      - name: Run API Tests
-        run: mvn test -Dcucumber.filter.tags="@api" -Dcucumber.plugin="io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
-      - name: Upload Allure Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-results-api
-          path: target/allure-results/
-        if: always()
 
-  web-tests-chrome:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+      # Cache Maven dependencies
+      - name: Cache Maven packages
+        uses: actions/cache@v3
         with:
-          submodules: false
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
-      - name: Run Web Tests (chrome)
-        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="chrome" -Dheadless=true -Dcucumber.plugin="io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
-      - name: Upload Allure Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-results-chrome
-          path: target/allure-results/
-        if: always()
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
-  web-tests-firefox:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: false
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
-      - name: Run Web Tests (firefox)
-        run: mvn test -Dcucumber.filter.tags="@web" -Dbrowser="firefox" -Dheadless=true -Dcucumber.plugin="io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
-      - name: Upload Allure Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-results-firefox
-          path: target/allure-results/
-        if: always()
+      # Set up Chrome
+      - name: Setup Chrome
+        if: matrix.browser == 'chrome'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
 
-  collect-results:
+      # Set up Firefox
+      - name: Setup Firefox
+        if: matrix.browser == 'firefox'
+        run: |
+          sudo apt-get install -y firefox
+
+      # Run tests
+      - name: Run Cucumber Tests
+        run: mvn test -Dbrowser=${{ matrix.browser }}
+
+      # Store test results
+      - name: Store Test Results
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: allure-results-${{ matrix.browser }}
+          path: target/allure-results
+
+  report:
+    needs: test
     runs-on: ubuntu-latest
-    needs: [api-tests, web-tests-chrome, web-tests-firefox]
     if: always()
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 21
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
-          cache: maven
-      - name: Download Allure Results
-        uses: actions/download-artifact@v4
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
         with:
-          path: downloaded-allure-results
-        if: always()
-      - name: Merge Allure Results
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      # Download all test results
+      - name: Download Test Results
+        uses: actions/download-artifact@v3
+        with:
+          path: allure-results
+
+      # Move results to target directory
+      - name: Prepare Allure Results
         run: |
           mkdir -p target/allure-results
-          cp -r downloaded-allure-results/*/*/ target/allure-results/ || true
-        if: always()
-      - name: Check Allure Results
-        run: ls -la target/allure-results || echo "No Allure results found"
-        if: always()
-      - name: Get Allure history
-        uses: actions/checkout@v3
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
+          cp -r allure-results/*/*/allure-results/* target/allure-results/
+
+      # Generate Allure Report
       - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@master
-        with:
-          allure_results: target/allure-results
-          allure_history: allure-history
-          keep_reports: 20
-      - name: Debug Allure History
-        run: ls -la allure-history || echo "Allure history directory is empty"
-        if: always()
-      - name: Deploy report to Github Pages
+        run: mvn allure:report
+
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+          publish_dir: ./target/site/allure-maven-plugin
+          keep_files: false
+          destination_dir: .
