--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,15 @@ jobs:
       fail-fast: false
 
     steps:
-      # Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Set up JDK
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
-      # Cache Maven dependencies
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -35,24 +32,9 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-#      # Set up Chrome
-#      - name: Setup Chrome
-#        if: matrix.browser == 'chrome'
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y google-chrome-stable
-
-#      # Set up Firefox
-#      - name: Setup Firefox
-#        if: matrix.browser == 'firefox'
-#        run: |
-#          sudo apt-get install -y firefox
-
-      # Run tests
       - name: Run Cucumber Tests
         run: mvn test -Dbrowser=${{ matrix.browser }}
 
-      # Store test results
       - name: Store Test Results
         uses: actions/upload-artifact@v4
         if: always()
@@ -69,7 +51,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
@@ -82,23 +64,22 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      # Download all test results
       - name: Download Test Results
         uses: actions/download-artifact@v4
         with:
           path: allure-results
+          pattern: allure-results-*
+          merge-multiple: false
 
-      # Move results to target directory
       - name: Prepare Allure Results
         run: |
           mkdir -p target/allure-results
-          cp -r allure-results/*/*/allure-results/* target/allure-results/
+          find allure-results -type f -mindepth 2 -maxdepth 2 -exec mv {} target/allure-results/ \;
+          ls -la target/allure-results/
 
-      # Generate Allure Report
       - name: Generate Allure Report
         run: mvn allure:report
 
-      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
