--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Generate Allure Report
         run: mvn allure:report
+        if: always()
 
       - name: Upload Allure results
         uses: actions/upload-artifact@v4
