--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,16 @@ jobs:
       - name: Build and Test
         run: mvn clean test
 
+      - name: Ensure logs directory exists
+        run: mkdir -p logs
+
+      - name: Upload logs
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-logs
+          path: logs/
+          retention-days: 14
+
       - name: Get Allure history
         uses: actions/checkout@v3
         if: always()
