--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,9 @@
 # API Configuration
-api.base.url=https://api.openweathermap.org/data/2.5
+api.base.url=https://api.openweathermap.org/
 api.key=e8f27862a2ebb2cfa891bd1c4a930a58
+
+weather.current.endpoint=data/2.5/weather
+weather.forecast.endpoint=data/2.5/forecast
 
 # Web Configuration
 web.contact.url=https://ultimateqa.com/filling-out-forms/
